# horizon_detector

./: .gitignore  LICENSE  README.md  accuracy_evaluation.py  autoupdater.py  button.py  configurations.yaml  controls.py  crop_and_scale.py  data_labler.py  draw_display.py  draw_horizon.py  draw_horizon_revision.py  draw_surfaces.py  find_horizon.py  flight_controller.py  get_pi_requirements.sh  global_variables.py  launch.sh  load_and_test_model.py  main.py  other_button_and_switch_functions.py  passthrough.py  picamera_test.py  pwm_in.py  pyproject.toml  radian_visualizer.py  scratchpad.py  semantic_segmentation.py  servo_test.py  servos.py  switches_and_servos.py  test_utils.py  text_to_speech.py  training_image_extractor.py  video_classes.py  video_flipper.py  video_producer.py
angle_adjuster/: angle_adjuster.py
flight_controller/: __init__.py  flight_controller.py  flight_program.py
horizon_detector/: __init__.py  horizon_detector.py
json_test/: test_json.txt
old/: config.py  crop_and_scale.py  disable_wifi_and_bluetooth.py  flight_controller.py  get_pi_requirements.sh  global_variables.py  video_classes.py
receiver/: __init__.py  read_sbus_from_GPIO.py  receiver.py
reference_code/: autopilot.py  await_thumbdrive.py  data_converter.py  data_labler.py  flight_controller_old.py  flight_controller_sim.py  graph_signal.py  hsv_tester.py  pwm_test.py  radian_visualizer.py  read_PWM.py  scratchpad.py  servos.py  switches_and_servos.py  thumbdrive.py  training_image_extractor.py
reference_scripts/: flattened_config_vs_nested_config.py
test/: __init__.py
(+16 files in other folders)
